adding packages view

--- a/app/pages/upload/application.jade
+++ b/app/pages/upload/application.jade
@@ -4,6 +4,7 @@ nav.navbar.navbar-default
 			li: a(href="") Open
 			li: a(href="#home") Home
 			li: a(href="#modules") Modules
+			li: a(href="#packages") Packages
 			li: a(href="#chunks") Chunks
 			li: a(href="#assets") Assets
 			li: a(href="#warnings") Warnings
